# sudoku-solver

./: .clang-format  CMakeLists.txt
.github/workflows/: runTests.yml
src/: board.cpp  board.hpp
src/solver/: solver.hpp
tests/: tests.cpp
tests/data/: easy_30.csv
